postgres/pgadmin/deployment4.yaml
---
apiVersion: v1
kind: Pod
metadata:
 name: web
 namespace: leaftix
 labels:
  app: web
spec:
  containers:
    - name: web
      image: dpage/pgadmin4:5.4
      securityContext:
        runAsGroup: 1000
      imagePullPolicy: IfNotPresent
      ports:
      - name: web
        containerPort: 80
      volumeMounts:
        - name: pgadmin-pv
          mountPath: /var/lib/pgadmin           
  volumes:
  - name: pgadmin-pv
    persistentVolumeClaim:
      claimName: pgadmin-pv-claim
