postgres/pgadmin/deployment_automatic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pgadmin
        octopusexport: OctopusExport
    spec:
      volumes:
        - name: pgadmin-pv
          persistentVolumeClaim:
            claimName: pgadmin-pv-claim
      containers:
        - name: pgadmin
          image: 'dpage/pgadmin4:5.4'
          imagePullPolicy: Always
          terminationMessagePolicy: FallbackToLogsOnError
          ports:
            - name: http
              containerPort: 80
              targetPort: 80
              protocol: TCP
          volumeMounts:
            - name: pgadmin-pv
              mountPath: '"/g/leaftix/bd"'
              subPath: ''
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 1000
      # affinity:
      #   podAntiAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #       - weight: 100
      #         podAffinityTerm:
      #           labelSelector:
      #             matchExpressions:
      #               - key: app
      #                 operator: In
      #                 values:
      #                   - pgadmin
      #           topologyKey: kubernetes.io/hostname
