postgres/pgadmin/deployment_complete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pgadmin
        octopusexport: OctopusExport
    spec:
      volumes:
        - name: pgadmin-pv
          persistentVolumeClaim:
            claimName: pgadmin-pv-claim
        - name: pgadmin-cfg
          configMap:
            name: pgadmin-cfg
      containers:
        - name: pgadmin
          image: 'dpage/pgadmin4:5.4'
          imagePullPolicy: Always
          terminationMessagePolicy: FallbackToLogsOnError
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: pgadmin-cfg
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true          
            - name: pgadmin-pv
              mountPath: '"/g/leaftix/bd"'
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 1000
