postgres/pgadmin/deployment2.yaml
apiVersion: v1
kind: Service
metadata:
 name: pgadmin-ldb-svc
spec:
 ports:
 - protocol: TCP
   port: 80
   targetPort: http
 selector:
   app: pgadmin-svc
 type: ClusterIP
 
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: web
spec:
 serviceName: "pgadmin-svc"
 replicas: 3
 selector:
   matchLabels:
     app: "pgadmin-svc"
 template:
   metadata:
     labels:
       app: pgadmin-svc
   spec:
     containers:
       - name: pgadmin-svc
         image: dpage/pgadmin4:5.4
         securityContext:
           runAsGroup: 1000           
         imagePullPolicy: Always
         ports:
         - name: web
           containerPort: 80
         volumeMounts:
         - name: pgadmin-cfg
           mountPath: /pgadmin4/servers.json
           subPath: servers.json
           readOnly: true
         - name: pgadmin-pv
           mountPath: /var/lib/pgadmin           
     
     volumes:
     - name: pgadmin-pv
       persistentVolumeClaim:
         claimName: pgadmin-pv-claim
     - name: pgadmin-cfg
       configMap:
         name: pgadmin-cfg
