postgres/pgadmin/deployment5.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  namespace: leaftix
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
  selector:
      app: web
