postgres/pgadmin/deployment_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
 name: pgadmin-ldb
 labels:
  app: pgadmin-ldb
spec:
 type: LoadBalancer
 ports:
 - port: 80
   name: web
 selector:
   app: pgadmin-svc
 
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: web
spec:
 serviceName: "pgadmin-svc"
 podManagementPolicy: Parallel
 replicas: 2
 updateStrategy:
   type: RollingUpdate
 selector:
   matchLabels:
     app: "pgadmin-svc"
 template:
   metadata:
     labels:
       app: pgadmin-svc
   spec:
     terminationGracePeriodSeconds: 10
     containers:
       - name: pgadmin-svc
         image: dpage/pgadmin4:5.4
         securityContext:
           runAsUser: 1000
           runAsGroup: 1000           
         imagePullPolicy: Always
         ports:
         - name: web
           containerPort: 80
         volumeMounts:
         - name: pgadmin-cfg
           mountPath: /pgadmin4/servers.json
           subPath: servers.json
           readOnly: true
         - name: pgadmin-pv
           mountPath: /var/lib/pgadmin
           readOnly: false
     
     volumes:
     - name: pgadmin-pv
       persistentVolumeClaim:
         claimName: pgadmin-pv-claim
     - name: pgadmin-cfg
       configMap:
         name: pgadmin-cfg
