postgres/pgadmin/k8s_pgadmin_deployment.yml
apiVersion: v1
kind: Service
metadata:
 name: pgadmin-svc
spec:
 ports:
 - protocol: TCP
   port: 80
   targetPort: http
 selector:
   app: pgadmin
 type: ClusterIP
 
---
apiVersion: v1
kind: Service
metadata:
 name: pgadmin-svc-open
spec:
 ports:
 - protocol: TCP
   port: 80
   targetPort: http
 selector:
   app: pgadmin
 type: NodePort

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: pgadmin-stf
spec:
 serviceName: pgadmin-svc
 podManagementPolicy: Parallel
 replicas: 2
 updateStrategy:
   type: RollingUpdate
 selector:
   matchLabels:
     app: pgadmin
 template:
   metadata:
     labels:
       app: pgadmin
   spec:
     terminationGracePeriodSeconds: 10
     containers:
       - name: pgadmin
         image: dpage/pgadmin4:5.4
         imagePullPolicy: Always
         ports:
         - name: http
           containerPort: 80
           protocol: TCP
         volumeMounts:
         - name: pgadmin-cfg
           mountPath: /pgadmin4/servers.json
           subPath: servers.json
           readOnly: true
         - name: pgadmin-pv
           mountPath: /var/lib/pgadmin
     volumes:
     - name: pgadmin-pv
       persistentVolumeClaim:
         claimName: pgadmin-pv-claim
     - name: pgadmin-cfg
       configMap:
         name: pgadmin-cfg
