postgres/pgadmin/deployment_automatic_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    #kubernetes.io/ingress.class: public
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /pgadmin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
